--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Xiao Peng
+title: 齐小大鹏
 email: fanxiaopeng515@163.com
-description: 范孝鹏的个人博客
+description: 这里是范孝鹏的个人博客
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://fanxiaopeng.github.io" # the base hostname & protocol for your site
 github_username:  fanxiaopeng
